fixes wrong color for bg (unknown var)

--- a/.config/ags/style/module.tray.scss
+++ b/.config/ags/style/module.tray.scss
@@ -1,5 +1,5 @@
 .tray-container {
-  background-color: $primary_bg;
+  background-color: $background_pane;
   padding-right: 8px;
 
   .tray-item {
